Thu, 06 Dec 2007 09:15:57 +0100 <thp@perli.net>
Added Galician translation from Teo Ramirez

	* data/gpodder.desktop: Added Spanish and Galician translations;
	thanks to Teo Ramirez <teoramirez@gmail.com>
	* data/messages.pot: Updated from source
	* data/po/de.po: Updated
	* data/po/gl.po: Added NEW Galician (gl) translation by Teo Ramirez
	* data/po/*.po: Updated from source
	* setup.py: Added Galician (gl) translation by Teo Ramirez

Thu, 06 Dec 2007 08:35:12 +0100 <thp@perli.net>
Sort channel list (finally ;)

	* src/gpodder/libpodcasts.py: Sort channels by lowercase title before
	returning the channel list in load_channels(); this automagically
	makes gPodder's channel list always sorted :)
	Thanks to FriedBunny <friedbunny@kulturny.com> for suggesting this and
	sending in an intial patch that led to this patch =)
	* TODO: Remove implemented item: Sort channel list

Tue, 04 Dec 2007 23:28:27 +0100 <thp@perli.net>
Do grayscale "pill" instead of theme-based colors (for bad themes)

	* src/gpodder/draw.py: Always draw the "pill" in semi-transparent
	black/grey shades so it will work for all GTK themes (even Ubuntu's)

Mon, 03 Dec 2007 21:35:56 +0100 <thp@perli.net>
Update channel navigator when iPod/MP3 player sync has finished

	* src/gpodder/gui.py: Update channel navigator when iPod sync has
	finished, so we can update the "played" status in the channel
	navigator when this status has changed after we've synced ("on sync
	mark played" option)

Mon, 03 Dec 2007 21:24:17 +0100 <thp@perli.net>
Add option to mark episodes as played after transfer to device

	* data/gpodder.glade: Option added to preferences dialog
	* src/gpodder/config.py: Add option "on_sync_mark_played"; will mark
	an episode as played when it gets transferred to a device
	* src/gpodder/gui.py: Glue code for GUI + gpodder.config
	* src/gpodder/libipodsync.py: On sync, mark episode as played if the
	user has selected the "on_sync_mark_played" option
	* TODO: Remove implemented/integrated items
