@@ -1,3 +1,10 @@
+Thu, 06 Dec 2007 09:29:09 +0100 <thp@perli.net>
+Support for iTunes Podcast links (http://phobos.apple.com/...)
+
+	* src/gpodder/util.py: Add support for subscribing to iTunes Podcast
+	links (those with phobos.apple.com); new functions:
+	parse_itunes_xml(), http_get_and_gunzip() and itunes_dicover_rss()
+
 Thu, 06 Dec 2007 09:15:57 +0100 <thp@perli.net>
 Added Galician translation from Teo Ramirez
 
